# mass_spring_theoretical_form

./: .gitignore  CMakeLists.txt  copy_macro.h  edge.mac  edge_cal.sh  edge_energe.f90  edge_gradient.f90  edge_gradient_and_hessian.f90  edge_hessian.f90  error_deal.h  generate_maxima_script.cpp  merge_gradient_and_hessiane_to_fortran.cpp  ms.mac  ms_gradient.f90  read_model.h  run.sh  vertex.h
